--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,9 @@ android {
         versionName "1.0"
 
     }
-
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -34,8 +36,9 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.leanback:leanback:1.0.0'
+    implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation "androidx.fragment:fragment-ktx:1.2.5"
 
 
@@ -46,7 +49,16 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.room:room-rxjava2:2.2.6'
 
+
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.18'
+    // KTX - Viewmodel Y Livedata
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0-rc01"
+    //ViewModel y LiveData
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     // TV provider support library
     implementation 'androidx.tvprovider:tvprovider:1.0.0'
 
@@ -64,8 +76,8 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     // Room library
-    def room_version = "2.2.5"
-    implementation "androidx.room:room-ktx:2.2.5"
+    def room_version = "2.2.6"
+    implementation "androidx.room:room-ktx:2.2.6"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
@@ -87,6 +99,10 @@ dependencies {
 
     // Coil
     implementation 'io.coil-kt:coil:0.7.0'
+
+
+    implementation "androidx.leanback:leanback-tab:1.0.0"
+    implementation "androidx.leanback:leanback-paging:1.0.0"
 
 
 
